@@ -4,6 +4,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
@@ -26,7 +27,7 @@ public class ZipCreate {
             zout.closeEntry();
             zout.close();
 
-            Files.write(Path.of("zip-create.zip"), bout.toByteArray());
+            Files.write(Paths.get("zip-create.zip"), bout.toByteArray());
         }
 
         var memoryEnd = Runtime.getRuntime().totalMemory() - Runtime.getRuntime().freeMemory();
